--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.5.1",
+    "react-use-websocket": "^4.5.0",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
